--- a/src/components/movie-properties/MovieProperties.css
+++ b/src/components/movie-properties/MovieProperties.css
@@ -51,7 +51,8 @@
     margin-top: 15px;
     min-width: 100px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
 }
 .movie-date-property {
